# dcextra2025

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  LICENSE  build_emscripten.sh  build_mac.sh
res/: level_list.edat
res/levels/: 111  Level1  Level2  Meatspace_Main  cyberspace  dreamspace_1  dreamspace_2  dreamspace_3  hello.json  level1  level2  level3  level_three_dee  lighting_test.json  ms_test  mytest  particle_stress_test  prefabtest  tb  test.json  test_level_trigger  test_motion_triggers  test_teleporter  testbillboard  testmememe  three_pads.json
res/meshes/: Bench.glb  Chair.glb  Console.glb  Door.glb  KeyCard.glb  WallBendIn.glb  WallConnector.glb  WallStorage.glb  crystals_test.glb  pickupbox.glb  teleporter.glb  treasure.glb  wall_mesh.glb
res/prefabs/: battles.flecs  billboards.edat  cam.edat  cam.flecs  ceilings.edat  columns.edat  doors.edat  entities.edat  floors.edat  levels.flecs  logic.edat  narrative.flecs  walls.edat
res/shaders/glsl100/: base.fs  lighting.fs  lighting.vs  lighting_instancing.vs  overlay.fs  tiling.fs
res/shaders/glsl330/: billboardShader.fs  lighting.fs  lighting.vs  lighting_instancing.vs  overlay.fs  tiling.fs
src/: CMakeLists.txt  audio.cpp  audio.h  cam.cpp  cam.h  game.h  level.cpp  level.h  main.cpp  math.cpp  math.h  movement.h  player.cpp  player.h  podval.h  prefabs.cpp  prefabs.h  primitives.cpp  primitives.h  renderer.cpp  renderer.h  rlights.h  settings.cpp  settings.h  tags.h  textures.cpp  textures.h  ui.cpp  ui.h
src/editor/: cam.cpp  editor.cpp  editor.h  editor_ui.cpp  editor_ui.h  player.cpp
src/game/: advancement.cpp  advancement.h  ai.cpp  ai.h  cam.cpp  debug.cpp  debug.h  game.cpp  game_ui.cpp  game_ui.h  interactables.cpp  interactables.h  player.cpp  spawn.cpp  spawn.h  triggers.cpp  triggers.h
